workshop/module5/deployment-and-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo
  labels:
    app: podinfo
    purpose: workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podinfo
      purpose: workshop
  template:
    metadata:
      labels:
        app: podinfo
        purpose: workshop
    spec:
      containers:
        - name: podinfo
          image: netgrif/podinfo:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 1
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo-clusterip
spec:
  type: ClusterIP
  selector:
    app: podinfo
    purpose: workshop
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
